# HorizonMath

./: .gitignore  README.md  pyproject.toml
data/: baselines.json  problems_full.json
docs/: index.html
numerics/: airy_moment_a3.py  apery_sequence_a005259.py  central_binomial_s6.py  feynman_2loop_sunset.py  feynman_epsilon_expansion.py  hypergeom_3f2_transform.py  irrationality_measure_catalan.py  knot_volume_5_2.py  ramsey_explicit_graphs.py  somos_laurent.py  spherical_5_design_minimal.py  stieltjes_gamma_2.py  trinomial_reducibility.py
scripts/: aggregate_results.py  baseline_comparator.py  convert_problems.py  evaluate.py  evaluate_responses.py  run_benchmark.py  run_benchmark_batch.py  run_numerics.py  tmux_run.sh  validator_registry.py
tests/: test_compliance.py  test_ramsey_baseline.py
validators/: A21_10_binary_code.py  __init__.py  autocorr_signed_upper.py  autocorr_upper.py  bklc_68_15.py  covering_C13_k7_t4.py  crossing_number_kn.py  cwcode_29_8_5.py  diff_basis_optimal_10000.py  diff_basis_upper.py  dts_7_5_min_scope.py  elliptic_curve_rank_30.py  elliptic_curve_rank_torsion_z7z.py  general_diff_basis_algo.py  hadamard_668.py  hadamard_716.py  heilbronn_n12.py  inverse_galois_m23.py  inverse_galois_suzuki.py  kakeya_finite_field.py  keich_thin_triangles_128.py  keich_universal.py  kissing_number_dim11.py  kissing_number_dim5.py  kissing_number_dim6.py  kissing_number_dim9.py  lattice_packing_dim10.py  lattice_packing_dim12.py  merit_factor_6_5.py  parametric_spherical_codes.py  periodic_packing_dim10.py  ramsey_asymptotic.py  ramsey_coloring_k5.py  (+13 more)
(+8 files in other folders)
