[project]
name = "openmath"
version = "0.1.0"
description = "OpenMath research project"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "cysignals>=1.12.6",
    "fpylll>=0.6.1",
    "google-genai>=1.60.0",
    "matplotlib>=3.10.8",
    "mpmath>=1.3.0",
    "networkx>=3.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "snappy>=3.3",
    "snappy-manifolds>=1.4",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
